# higher-dimension-playground

./: .gitignore  4D_CONTROL_MAPPING_RESEARCH.md  Cargo.toml  DISTANT_HORIZON_LOD_PLAN.md  Dockerfile  NON_VOXEL_ENTITIES_SUBPROJECT.md  README.md  RENDERING.md  SAVE_FORMAT_V3_SPEC.md  SAVE_FORMAT_V4_SPEC.md  VOXEL_ENGINE_DESIGN.md  VTE_QUALITY_SWEEP.md  WASM_PLUGIN_RUNTIME_PLAN.md  build.rs  index.html  recompress.py  rust-toolchain.toml  tesseract.yaml
.github/workflows/: linux-build.yml  windows-build.yml
common/: Cargo.toml
common/src/: layout_verify.rs  lib.rs  linalg_n.rs  linalg_n_simd.rs  mat_n.rs  matmul_5_gpu.rs  utils.rs  vec_n.rs
crates/demo/: Cargo.toml
crates/demo/src/: main.rs
crates/exr-converter/: Cargo.toml
crates/game/: Cargo.toml
crates/polychora/: Cargo.toml  build.rs
crates/polychora-common/: Cargo.toml
crates/polychora-content/: Cargo.toml
crates/polychora-content/.cargo/: config.toml
crates/polychora-content/assets/structures/: cathedral_spine.json  duoprism_exchange.json  frozen_spire.json  lattice_hall.json  ore_cairn.json  portal_axis.json  resonance_forge.json  ring_keep.json  sandstone_obelisk.json  sky_bridge.json  terraced_pyramid.json
crates/polychora-content/crates/polychora-content/assets/structures/: braided_transit.json  hypercube_frame.json  moss_ruins.json  pentachord_spindle.json  phase_cloister.json  phase_ladder.json  prism_fountain.json  shard_garden.json  tetra_spire.json
crates/polychora-content/src/: block_interact.rs  block_tick.rs  blocks.rs  entities.rs  entity_tick.rs  lib.rs  math4d.rs  models.rs  steering.rs  textures.rs
crates/polychora-content/src/procgen/: maze.rs  mod.rs  structures.rs
crates/polychora-plugin-api/: Cargo.toml
crates/polychora-plugin-api/src/: block.rs  block_tick_abi.rs  content_ids.rs  entity.rs  entity_tick_abi.rs  gui_abi.rs  lib.rs  manifest.rs  mob_abi.rs  model_abi.rs  opcodes.rs  procgen_abi.rs  region_tree.rs  side_effects.rs  texture.rs
crates/polychora-server/: Cargo.toml
crates/polychora-server/src/: main.rs  procgen.rs  protocol.rs  voxel.rs
crates/polychora/assets/structures/: braided_transit.json  cathedral_spine.json  clifford_atrium.json  cross_shrine.json  duoprism_exchange.json  frozen_spire.json  hyper_arch.json  hyper_maze.json  hypercube_frame.json  lattice_hall.json  lumen_orrery.json  moss_ruins.json  ore_cairn.json  orthoplex_nexus.json  pentachord_spindle.json  phase_cloister.json  phase_ladder.json  portal_axis.json  prism_fountain.json  resonance_forge.json  ring_keep.json  sandstone_obelisk.json  shard_garden.json  sky_bridge.json  terraced_pyramid.json  tetra_spire.json  void_colonnade.json
crates/polychora/src/: app_bootstrap.rs  app_console.rs  app_controls.rs  app_events.rs  app_gameplay_loop.rs  app_helpers.rs  app_hud.rs  app_main_menu.rs  app_multiplayer.rs  app_perf.rs  app_runtime.rs  app_settings.rs  app_ui.rs  audio.rs  audio_synth.rs  block_gui.rs  builtin_content.rs  camera.rs  consts.rs  content_registry.rs  cpu_render.rs  input.rs  legacy_migration.rs  lib.rs  main.rs  material_icons.rs  materials.rs  multiplayer.rs  plugin_loader.rs  save_v3.rs  save_v4.rs  save_v4_migration.rs  scene.rs
crates/polychora/src/camera/: tests.rs
crates/polychora/src/migration/: legacy_migration.rs  legacy_voxel.rs  legacy_world_io.rs  mod.rs  save_v3.rs  save_v4_migration.rs
crates/polychora/src/save_v4/: entity_io.rs  index_tree.rs  load.rs  mod.rs  save.rs  tests.rs
crates/polychora/src/scene/: chunk_encoder.rs  collision.rs  delta_patcher.rs  editing.rs  frame_builder.rs  patching.rs  render_cache.rs  tests.rs  voxel_runtime.rs
crates/polychora/src/server/: block_tick.rs  config.rs  core_state.rs  cpu_profile.rs  entities.rs  mob_sim.rs  mod.rs  procgen.rs  procgen_wasm.rs  region_tree_cache.rs  runtime_net.rs  spawn_logic.rs  types.rs  world_cache.rs  world_field.rs  world_tree.rs
crates/polychora/src/server/mob_sim/: mod.rs  navigation.rs  physics.rs
crates/polychora/src/server/procgen/: maze.rs  structure.rs  tests.rs
crates/polychora/src/server/world_field/: flat_world_generator.rs  legacy_generator.rs  massive_platforms_world_generator.rs  mod.rs  tests.rs
crates/polychora/src/shared/: chunk_payload.rs  entity_types.rs  inventory.rs  item_types.rs  legacy_world_io.rs  mod.rs  protocol.rs  scaled_bounds.rs  spatial.rs  voxel.rs  worldfield.rs  worldfield_testkit.rs
crates/polychora/src/shared/region_tree/: chunk_array_ops.rs  integrity.rs  mod.rs  orient.rs  plugin_convert.rs  tests.rs  tree.rs  tree_edit.rs  tree_normalize.rs  tree_query.rs
crates/polychora/src/shared/render_tree/: bvh.rs  mod.rs  tests.rs
crates/polychora/src/shared/voxel/: io.rs  mod.rs  world.rs
crates/polychora/src/shared/wasm/: abi.rs  cache.rs  manager.rs  mod.rs  runtime.rs
crates/polychora/src/shared/worldfield/: region_tree.rs
crates/polychora/src/voxel/: chunk.rs  cull.rs  io.rs  mod.rs  world.rs  worldgen.rs
crates/worldgen-cli/: Cargo.toml
docs/: wasm-plugin-system.md
docs/concepts/: hex-casting.md
docs/old/: ENTITY_SYSTEM_REVIEW_PLAN.md  SAVE_FORMAT_V3_SPEC.md  VTE_QUALITY_SWEEP.md
docs/specs/: multi-scale-voxel-world-plan.md  next-gen-render-pipeline-plan.md  non-voxel-entity-reintegration-design.md  region-tree-migration-status.md  region-tree-worldfield.md
scripts/: analyze_vte_quality.py  perf_compare.sh  perf_suite_run.sh  upgrade_v4dw_v1_to_v2.py  vte_quality_sweep.sh  vte_quality_sweep_high_l.sh
shaders/: Cargo.toml
shaders/src/: lib.rs  materials.rs  matmul_5_gpu.rs  present.rs  rasterizer.rs  raytracer.rs  shaders.rs  textures.rs
slang-shaders/: README.md
slang-shaders/src/: bvh.slang  hud.slang  materials.slang  math.slang  present.slang  rasterizer.slang  raytracer.slang  types.slang  voxel.slang
src/: exr_converter.rs  hypercube.rs  lib.rs  main.rs  matrix_operations.rs  present.wgsl  present_pass.rs  raster.wgsl  raster_clear.wgsl  raster_lines.wgsl  raster_pass.rs  raster_sort.wgsl  render.rs  shader.wgsl  tesseract.rs  vulkan_setup.rs
src/old/: matrix_operations.rs  present.wgsl  present_pass.rs  (+5 more)
(+32 files in other folders)
