[package]
name = "higher-dimension-playground"
version = "0.1.0"
edition = "2021"



[dependencies]
# The `vulkano` crate is the main crate that you must use to use Vulkan.
vulkano = {git = "https://github.com/vulkano-rs/vulkano.git"}
# Provides the `shader!` macro that is used to generate code for using shaders.
vulkano-shaders = {git = "https://github.com/vulkano-rs/vulkano.git"}

common = {path="common", features=["ndarray"]}

ndarray = {version="0.16.1"}

bytemuck = { version = "1.18", features=["derive"] }

# The Vulkan library doesn't provide any functionality to create and handle windows, as
# this would be out of scope. In order to open a window, we are going to use the `winit` crate.
winit = "0.30"
glam = {version = ">=0.22, <=0.29", features=["bytemuck"], default-features = false}

[build-dependencies]
#spirv-builder = {git = "https://github.com/rust-gpu/rust-gpu.git"}
spirv-builder = {git = "https://github.com/Firestar99/rust-gpu-new.git", branch="linker-speedup"}

