[workspace]
members = ["common", "crates/*"]
exclude = ["crates/polychora-common", "crates/polychora-server"]

[package]
name = "higher-dimension-playground"
version = "0.1.0"
edition = "2021"

[lib]
name = "higher_dimension_playground"
path = "src/lib.rs"

[dependencies]

# The `vulkano` crate is the main crate that you must use to use Vulkan.
vulkano = "0.35"

# Provides the `shader!` macro that is used to generate code for using shaders.
vulkano-shaders = "0.35"

common = {path="common", features=["ndarray", "nalgebra"]}

exr = "1.73.0"

ndarray = {version="0.16.0"}
nalgebra = {version="0.33.2"}

bytemuck = { version = "1.18", features=["derive"] }
image = { version="0.25", features=["rayon"] }

# The Vulkan library doesn't provide any functionality to create and handle windows, as
# this would be out of scope. In order to open a window, we are going to use the `winit` crate.
winit = "0.30"
glam = {version = "0.24", features=["bytemuck"]}
ab_glyph = "0.2"

# Build dependencies removed - using slangc CLI instead
# [build-dependencies]
# spirv-builder = {git = "https://github.com/Firestar99/rust-gpu-new.git", branch="linker-speedup"}
