[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.18", features=["derive"] }
glam = {version = "0.24", features=["bytemuck"]}


ndarray = {version="0.16.0", default-features=false, optional=true}
nalgebra = {version="0.33.2", default-features=false, optional=true}

[features]
default = []
ndarray = ["dep:ndarray"]
nalgebra = ["dep:nalgebra"]