[package]
name = "shaders"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
#spirv-std = {git = "https://github.com/rust-gpu/rust-gpu.git"}
spirv-std = {git = "https://github.com/Firestar99/rust-gpu-new.git", branch="linker-speedup"}

common = {path="../common"}

bytemuck = { version = "1.18", features=["derive"] }
glam = {version = ">=0.22, <=0.29", features=["bytemuck"], default-features = false}

[features]
default = []