[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
higher-dimension-playground = { path = "../.." }
common = { path = "../../common", features = ["ndarray", "nalgebra"] }
vulkano = "0.35"
winit = "0.30"
clap = { version = "4.6", features = ["derive"] }
ndarray = "0.17"
image = { version = "0.25", features = ["rayon"] }
