[package]
name = "polychora-content"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
polychora-plugin-api = { path = "../polychora-plugin-api" }
postcard = { version = "1", default-features = false, features = ["alloc"] }
dlmalloc = { version = "0.2", features = ["global"] }
libm = "0.2"
