[package]
name = "polychora-server"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1", features = ["use-std"] }
polychora-common = { path = "../polychora-common" }
