[package]
name = "polychora"
version = "0.1.0"
edition = "2021"

[dependencies]
higher-dimension-playground = { path = "../.." }
common = { path = "../../common", features = ["ndarray", "nalgebra"] }
polychora-common = { path = "../polychora-common" }
vulkano = "0.35"
winit = "0.30"
clap = { version = "4.5", features = ["derive"] }
ndarray = "0.16.0"
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
egui = "0.33.3"
egui-winit = "0.33.3"
