[package]
name = "polychora"
version = "0.1.0"
edition = "2021"
default-run = "polychora"

[[bin]]
name = "polychora-server"
path = "src/bin/polychora-server.rs"

[dependencies]
higher-dimension-playground = { path = "../.." }
common = { path = "../../common", features = ["ndarray", "nalgebra"] }
vulkano = "0.35"
winit = "0.30"
clap = { version = "4.5", features = ["derive"] }
ndarray = "0.16.0"
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
postcard = { version = "1", features = ["use-std"] }
egui = "0.33.3"
egui-winit = { version = "0.33.3", default-features = false, features = ["links", "wayland", "x11"] }
rodio = "0.20"
crc32fast = "1.4"
